Refactor dish lookup methods to use instance of Menu and improve order parsing logic